src/deployment-strategies/blue-green/api-v2.yaml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: phippy-api-v2
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: phippy
      app.kubernetes.io/component: api
      app.kubernetes.io/version: v2.0
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: phippy
        app.kubernetes.io/component: api
        app.kubernetes.io/version: v2.0
    spec:
      containers:
      - name: phippy-api
        image: ghcr.io/hlesey/phippy-api:2.0
        resources:
          limits:
            memory: "100Mi"
          requests:
            cpu: "100m"
            memory: "100Mi"
        ports:
        - name: http
          containerPort: 5000
        livenessProbe:
          httpGet:
            path: /livezz
            port: http
        readinessProbe:
          httpGet:
            path: /readyz
            port: http
