src/deployment-strategies/blue-green/phippy-v2.yaml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: phippy-v2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: phippy
      version: v2.0
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: phippy
        version: v2.0
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "5000"
    spec:
      containers:
      - name: phippy
        image: ghcr.io/hlesey/phippy:2.0
        resources:
          requests:
            cpu: "100m"
            memory: "100Mi"
        ports:
        - name: http
          protocol: TCP
          containerPort: 5000
        livenessProbe:
          httpGet:
            path: /healthz
            port: http
          initialDelaySeconds: 15
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /healthz
            port: http
          periodSeconds: 5
