src/deployment-strategies/blue-green/api-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: phippy-api
spec:
  selector:
    app.kubernetes.io/name: phippy
    app.kubernetes.io/component: api
    app.kubernetes.io/version: v1.0
  ports:
  - name: http
    port: 80
    targetPort: 5000
