src/deployment-strategies/blue-green/db.yaml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: phippy-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: phippy
      app.kubernetes.io/component: db
  template:
    metadata:
      labels:
        app.kubernetes.io/name: phippy
        app.kubernetes.io/component: db
    spec:
      containers:
      - name: redis
        image: ghcr.io/hlesey/redis:6.2.6
        ports:
        - name: redis
          containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: phippy-db
spec:
  selector:
    app.kubernetes.io/name: phippy
    app.kubernetes.io/component: db
  ports:
  - name: redis
    port: 6379
    targetPort: 6379
