src/deployment-strategies/blue-green/phippy-v1.yaml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: phippy-v1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: phippy
      version: v1.0
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: phippy
        version: v1.0
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "5000"
    spec:
      containers:
      - name: phippy
        image: hlesey/phippy:1.0
        resources:
          requests:
            cpu: "100m"
            memory: "100Mi"
        ports:
        - name: http
          protocol: TCP
          containerPort: 5000
        livenessProbe:
          httpGet:
            path: /healthz
            port: http
          initialDelaySeconds: 15
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /healthz
            port: http
          periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: phippy
spec:
  selector:
    app: phippy
    version: v1.0
  ports:
  - name: http
    port: 80
    targetPort: 5000
    protocol: TCP
