src/deployment-strategies/blue-green/api-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name:  phippy-api
spec:
  parentRefs:
  - name: eg
    namespace: envoy-gateway
  hostnames:
  - phippy-api.clusterx.qedzone.ro
  rules:
  - backendRefs:
    - name: phippy-api
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /
