src/deployment-strategies/blue-green/api-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: phippy-api
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: phippy-api.clusterx.qedzone.ro
    http:
      paths:
      - path: /
        pathType: "Prefix"
        backend:
          service:
            name: phippy-api
            port:
              number: 80
