src/deployment-strategies/blue-green/phippy-ing.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: phippy
spec:
  rules:
  - host: phippy.local
    http:
      paths:
      - path: /
        backend:
          serviceName: phippy
          servicePort: 80
